--- a/src/components/layout/pageLayout.module.css
+++ b/src/components/layout/pageLayout.module.css
@@ -33,6 +33,17 @@
 .nav .container .menus .menu {
   color: white;
   text-decoration: none;
+  width: 100%;
+}
+
+.footer {
+  height: 200px;
+  display: flex;
+  align-items: center;
+  background: #1a1a1a;
+  justify-content: center;
+  color: white;
+  text-transform: capitalize;
 }
 
 @media screen and (max-width: 500px) {
