--- a/src/components/layout/pageLayout.module.css
+++ b/src/components/layout/pageLayout.module.css
@@ -35,6 +35,37 @@
   text-decoration: none;
   width: 100%;
 }
+.nav .container .menus .dropdownContainer {
+  position: relative;
+  top: 0;
+  padding: 10px 0;
+  cursor: pointer;
+}
+.nav .container .menus .dropdownContainer:hover .dropdownMenu {
+  display: block;
+}
+.nav .container .menus .dropdownContainer .dropdownMenu {
+  position: absolute;
+  top: 100%;
+  left: -50Px;
+  background-color: #1a1a1a;
+  display: none;
+  min-width: 200px;
+}
+.nav .container .menus .dropdownContainer .dropdownMenu .dropdownItem {
+  padding: 10px;
+}
+.nav .container .menus .dropdownContainer .dropdownMenu .dropdownItem a {
+  text-decoration: none;
+  color: white;
+  width: 100%;
+}
+.nav .container .menus .dropdownContainer .dropdownMenu .dropdownItem:hover {
+  background-color: black;
+}
+.nav .container .menus .dropdownContainer .dropdownMenu .dropdownItem:hover a {
+  text-decoration: underline;
+}
 
 .footer {
   height: 200px;
@@ -77,6 +108,7 @@
     text-decoration: none;
     text-transform: uppercase;
     color: white;
+    width: 100%;
   }
   .nav .container .menus .menuTop .close {
     cursor: pointer;
@@ -86,5 +118,14 @@
   }
   .nav .container .menus .li:hover {
     background-color: black;
+  }
+  .nav .container .menus .dropdownContainer {
+    position: unset;
+    padding: 10px 15px;
+  }
+  .nav .container .menus .dropdownContainer .dropdownMenu {
+    position: unset;
+    background-color: #222222;
+    border-radius: 10px;
   }
 }/*# sourceMappingURL=pageLayout.module.css.map */
